add github link

--- a/engine/content/index.html
+++ b/engine/content/index.html
@@ -22,7 +22,13 @@
         </ol>
       </dd>
       <dt>Who made this sweet sweet app?</dt>
-      <dd>Matt Hartzler, lover and ninja.  Enjoy!</dd>
+      <dd>Matt Hartzler, lover and ninja.</dd>
+      <dt>Where can I hack on this?</dt>
+      <dd>
+        At
+        <a href='http://github.com/hartzler/myspellbook'>github</a>
+        of course!
+      </dd>
     </dl>
   </body>
 </html>
