added druid class and per level counters for known/memorized

--- a/engine/content/index.html
+++ b/engine/content/index.html
@@ -16,7 +16,8 @@
           </li>
           <li>
             Click
-            <a href='spellbook.html'>Spellbook!</a>
+            <a href='spellbook.html'>Wizard Spellbook!</a>
+            <a href='druid.html'>Druid Spellbook!</a>
           </li>
           <li>Rejoice!</li>
         </ol>
