--- a/engine/content/index.html
+++ b/engine/content/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
-    <link href='main.css' rel='stylesheet' type='text/css' />
+    <link href='bootstrap-1.0.0.css' rel='stylesheet' type='text/css' />
+    <link href='main.less' rel='stylesheet' type='text/css' />
+    <script src='less.js' type='text/javascript'></script>
   </head>
   <body>
     <h1>MySpellBook</h1>
